* create API functions to access link information values
* add libfvalue

API
* add functions
  - for shell item
  - for icon location block ?
  - for special and/or known folder identifier

Release:
* check TODOs
* configure
 - check inclusion local library functions
* update manuals
* update macosx package files
* automated tests
  - 2x open/close (bfio and normal)

Bindings:
* .net
* java

20121026
* bug fix in new pylnk functions

20121025
* libfwsi update, fixed issues with debug output

20121024
* pylnk: added time_as_integer functions

20121023
* updated dependencies
* bug fixes in pylnk
* code clean up

20120925
* updated dependencies
* fixed issue that file io handle is not cleared on close when passed
* lnkinfo: fixed issue not passing codepage

20120825
* email change
* updated dependencies

20120507
* updated dependencies
* fixed GUID string too small issue
* fixed issue for handling shell items

20120426
* fixes for pkg-config detection of libraries
* applied updates

20120419
* applied updates
* code clean up

20120408
* code clean up

20120407
* updated dependencies

20120406
* updated dependencies

20120319
* worked on Python bindings (pylnk)

20120312
* worked on Python bindings (pylnk)
  - worked on get/set attribute functions
* libfwsi code clean up

20120309
* worked on Python bindings (pylnk)
  - worked on get/set attribute functions

20120307
* worked on Python bindings (pylnk)
  - added parsing of codepage string

20120306
* worked on Python bindings (pylnk)
  - added passing of file object

20120305
* worked on Python bindings (pylnk)
* updated libnotify, libsystem, libbfio, libfwsi
* added dpkg files
* added liblnk.rc

20120102
* 2012 update

20111112
* updated libsystem, libcstring

20111101
* updated libcstring, libsystem, libuna, libbfio, libfdatetime
* added windows codepage 932 and 936 support
* updated lnkinput

20111030
* updated configure.ac and m4 files

20111009
* updated configure.ac and m4 files
* updated common