@@ -11,7 +11,7 @@ BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 @liblnk_spec_build_requires@ @ax_libbfio_spec_build_requires@ @ax_libcdata_spec_build_requires@ @ax_libcerror_spec_build_requires@ @ax_libcfile_spec_build_requires@ @ax_libclocale_spec_build_requires@ @ax_libcnotify_spec_build_requires@ @ax_libcpath_spec_build_requires@ @ax_libcsplit_spec_build_requires@ @ax_libcstring_spec_build_requires@ @ax_libfdatetime_spec_build_requires@ @ax_libfguid_spec_build_requires@ @ax_libfwsi_spec_build_requires@ @ax_libuna_spec_build_requires@
 
 %description
-liblnk is a library to support the Windows Shortcut File (LNK) format 
+liblnk is a library to support the Windows Shortcut File (LNK) format
 
 %package devel
 Summary: Header files and libraries for developing applications for liblnk
@@ -81,7 +81,6 @@ rm -rf ${RPM_BUILD_ROOT}
 %files python
 %defattr(644,root,root,755)
 %doc AUTHORS COPYING NEWS README
-%attr(755,root,root) %{_libdir}/python*/site-packages/*.so.*
 %{_libdir}/python*/site-packages/*.a
 %{_libdir}/python*/site-packages/*.la
 %{_libdir}/python*/site-packages/*.so
